second commit pour finir la première partie du tuto

--- a/templates/blog/home.html.twig
+++ b/templates/blog/home.html.twig
@@ -1,6 +1,11 @@
+{% extends "base.html.twig" %}
+
+{% block body %}
+     
 <h1>Bienvenue sur mon site</h1>
 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quisquam quaerat unde fugit nostrum beatae perferendis ducimus nobis voluptas quas illum, impedit, quae illo tenetur dicta facere ratione ea praesentium dolorem nihil veniam! Odit possimus officia deserunt quasi similique aspernatur.</p>
+    <p>Repudiandae, expedita laudantium. Et culpa impedit autem pariatur nostrum quia unde ea ex, exercitationem quas cupiditate fugiat. Impedit, quas! Eaque temporibus voluptates autem voluptatem dolor minima? Temporibus, corrupti natus officia voluptatum eius mollitia fugit repellendus, quasi, consectetur beatae nam quisquam.</p>
 
 
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quisquam quaerat unde fugit nostrum beatae perferendis ducimus nobis voluptas quas illum, impedit, quae illo tenetur dicta facere ratione ea praesentium dolorem nihil veniam! Odit possimus officia deserunt quasi similique aspernatur.</p>
-<p>Repudiandae, expedita laudantium. Et culpa impedit autem pariatur nostrum quia unde ea ex, exercitationem quas cupiditate fugiat. Impedit, quas! Eaque temporibus voluptates autem voluptatem dolor minima? Temporibus, corrupti natus officia voluptatum eius mollitia fugit repellendus, quasi, consectetur beatae nam quisquam.</p>
+{% endblock body %}
