fin du tutoriel sur les forms au top

--- a/templates/blog/create.html.twig
+++ b/templates/blog/create.html.twig
@@ -6,7 +6,12 @@
 {% form_theme formArticle 'bootstrap_4_layout.html.twig' %} <!--Pour utiliser le template form bootstrap-->
 
 
-    <h1>Création d'un article</h1>
+    <h1>{% if editMode %}
+        Modification d'un article 
+        {% else %}
+        Création d'un article
+        {% endif %}
+    </h1>
     
     {{ form_start(formArticle) }}
     
@@ -14,7 +19,12 @@
     {{ form_row(formArticle.content, {'attr' : {"placeholder" : "contenu de l'article"}}) }}
     {{ form_row(formArticle.image, {'attr': {"placeholder" : "rentrez l'url de l'image"}}) }}
 
-    <button type="submit" class="btn btn-success">Ajouter l'article</button> 
+    <button type="submit" class="btn btn-success">
+        {% if editMode %}
+            Enregister les modifications
+        {% else %}
+            Ajouter l'article</button> 
+        {% endif %}
     {{ form_end(formArticle) }}
     
 {% endblock body %}
